progresso aula sexta-feira

--- a/index.html
+++ b/index.html
@@ -133,9 +133,7 @@
                             <p>Object oriented programming</p>
                             <button>View</button>
                         </div>
-                        <div class="imagem1">
                             <img src="./img/Icon Container.png" alt="">
-                        </div>
                     </div>
 
                     <div>
@@ -143,45 +141,40 @@
                             <p>Fundamentals of database systems</p>
                             <button>View</button>
                         </div>
-                        <div class="imagem2">
                             <img src="./img/Group 16.png" alt="">
-                        </div>
                     </div>
                 </div>
             </section>
 
-            <section>
-                <article class="instructors-container">
+            <section class="instructors-container">
 
+                <div>
+                    <h3>Course Instructors</h3>
+                </div>
+                <div> 
+                    <img src="./img/Ellipse 16.png" alt="">
+                    <img src="./img/Ellipse 17.png" alt="">
+                    <img src="./img/Ellipse 18.png" alt="">
+                </div>
+            </section>
+            <section class="inform-container">
+                <div>
+                    <h3>Daily notice</h3>
+                    <h3>See all</h3>
+                </div>
                     <div>
-                        <h3>Course Instructors</h3>
-            
-                        <div> 
-                            <img src="./img/Ellipse 16.png" alt="">
-                            <img src="./img/Ellipse 17.png" alt="">
-                            <img src="./img/Ellipse 18.png" alt="">
+                        <div>
+                            <h4>Prelim payment due</h4>
+                            <p>Sorem ipsum dolor sit amet, consectetur adipiscing elit.</p>
+                            <p>See more</p>
                         </div>
-                    </div>
-
-                    <div>
-                        <h3>Daily notice</h3>
-                        <h3>See all</h3>
 
                         <div>
-                            <div>
-                                <h4>Prelim payment due</h4>
-                                <p>Sorem ipsum dolor sit amet, consectetur adipiscing elit.</p>
-                                <p>See more</p>
-                            </div>
-
-                            <div>
-                                <h4>Exam schedule</h4>
-                                <p>Norem ipsum dolor sit amet, consectetur adipiscing elit. Nunc vulputate libero et velit interdum, ac aliquet odio mattis.</p>
-                                <p>See more</p>
-                            </div>
-                        </div>
+                            <h4>Exam schedule</h4>
+                            <p>Norem ipsum dolor sit amet, consectetur adipiscing elit. Nunc vulputate libero et velit interdum, ac aliquet odio mattis.</p>
+                            <p>See more</p>
                     </div>
-                </article>
+                </div>
             </section>
         </div>
 
