--- a/index.html
+++ b/index.html
@@ -128,18 +128,22 @@
                     <h3 class="ignore">See all</h3>
                 </div>
                 <div class="courses-content">
-                    <div>
+                    <div id="courses10">
                         <div>
                             <p>Object oriented programming</p>
-                            <button>View</button>
+                            <nav class="button-container">
+                                <button>View</button>
+                            </nav>
                         </div>
                             <img src="./img/Icon Container.png" alt="">
                     </div>
 
-                    <div>
+                    <div id="courses10">
                         <div>
                             <p>Fundamentals of database systems</p>
-                            <button>View</button>
+                            <nav class="button-container">
+                                <button>View</button>
+                            </nav>
                         </div>
                             <img src="./img/Group 16.png" alt="">
                     </div>
@@ -157,22 +161,25 @@
                     <img src="./img/Ellipse 18.png" alt="">
                 </div>
             </section>
+
             <section class="inform-container">
-                <div>
+                <article>
                     <h3>Daily notice</h3>
-                    <h3>See all</h3>
-                </div>
-                    <div>
+                    <h3 class="ignore">See all</h3>
+                </article>
+                <div class="center-container">
+                    <div class="center-container-2">
                         <div>
                             <h4>Prelim payment due</h4>
                             <p>Sorem ipsum dolor sit amet, consectetur adipiscing elit.</p>
-                            <p>See more</p>
+                            <h6 class="ignore">See more</h6>
                         </div>
 
                         <div>
                             <h4>Exam schedule</h4>
                             <p>Norem ipsum dolor sit amet, consectetur adipiscing elit. Nunc vulputate libero et velit interdum, ac aliquet odio mattis.</p>
-                            <p>See more</p>
+                            <h6 class="ignore">See more</h6>
+                        </div>
                     </div>
                 </div>
             </section>
